--- a/styles.css
+++ b/styles.css
@@ -279,11 +279,11 @@ header {
     color: var(--accent);
     background: rgba(255,255,255,0.74);
     display: inline-block;
-    padding: .3em 1em;
-    border-radius: 2em;
-    font-size: 1em;
+    padding: .2em 1em;
+    border-radius: 1.5em;
+    font-size: .9em;
     box-shadow: 0 2px 18px rgba(0,0,0,0.14);
-    font-weight: 700;
+    font-weight: 600;
   }
 }
 /***** SECTION SERVICES *****/
